# keytap

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.h  config.c  config.h  devices.c  devices.h  key_action.c  key_action.h  keytap.c  keytap.service  main.c  names.c  names.h  networking.c  networking.h  permissions.c  permissions.h  resolver.c  resolver.h  sdiol.c  sdiol.service  server.c  server.h  time_util.c  time_util.h
